使用 actix-web 开发 web 服务器 - 使用数据库存储信息

--- a/db/Cargo.toml
+++ b/db/Cargo.toml
@@ -10,7 +10,7 @@ actix-rt = "2.6.0"
 actix-web = "3.3.3"
 chrono = { version = "0.4.19", features = ["serde"]}
 dotenv = "0.15.0"
-openssl = { version = "0.10.38", features =["vendored"] }
+#openssl = { version = "0.10.38", features =["vendored"] }
 serde = { version="1.0.134",features =["derive"] }
 sqlx = { version="0.5.10", features= [
     "postgres",
