--- a/ws/webservice/Cargo.toml
+++ b/ws/webservice/Cargo.toml
@@ -7,10 +7,23 @@ default-run = "teacher-service"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "3"
-actix-rt = "1.1.1"
-serde = {version = "1.0.132", features = ["derive"]}
+actix-rt = "2.6.0"
+actix-web = "4.0.0"
 chrono = {version = "0.4.19", features = ["serde"]}
+dotenv = "0.15.0"
+
+serde = {version = "1.0.132", features = ["derive"]}
+#openssl = { version = "0.10.38", features =["vendored"] }
+
+sqlx = { version="0.6.3", default-features = false, features= [
+    "postgres",
+    "runtime-tokio-rustls",
+    "macros",
+    "chrono"
+]}
+
+#[build-dependencies]
+#syn = "1"
 # [[bin]]
 # name = "server1"
 
