--- a/wasm-game-of-life/Cargo.toml
+++ b/wasm-game-of-life/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wasm-client"
+name = "wasm-game-of-life"
 version = "0.1.0"
 authors = ["windofme1109 <wuzengyan1314@163.com>"]
 edition = "2018"
@@ -11,31 +11,8 @@ crate-type = ["cdylib", "rlib"]
 default = ["console_error_panic_hook"]
 
 [dependencies]
-chrono = {version = "0.4.19", features = ["serde"]} 
+wasm-bindgen = "0.2.84"
 
-serde ={ version = "1.0.136", features = ["derive"] }
-serde_derive = "1.0.136"
-serde_json = "1.0.79"
-js-sys = "0.3.56"
-wasm-bindgen = {version = "0.2.84", features = ["serde-serialize"]}
-wasm-bindgen-futures = "0.4.29"
-serde-wasm-bindgen = "0.4"
-web-sys = {version = "0.3.56", features = [
-    "Headers", 
-    "Request", 
-    "RequestInit",
-    "RequestMode",
-    "Response",
-    "Window",
-    "Document",
-    "Element",
-    "HtmlElement",
-    "Node",
-    "console",
-    "HtmlButtonElement",
-    "MouseEvent",
-    "Location"
-]}
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
 # all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
