--- a/ws-2/webservice/Cargo.toml
+++ b/ws-2/webservice/Cargo.toml
@@ -3,10 +3,21 @@ name = "webservice"
 version = "0.1.0"
 edition = "2021"
 
+default-run = "teacher-service"
+
 [dependencies]
 actix-web = "4.0.0"
 actix-rt = "2.6.0"
-chrono={version = "0.4.19", features = ["serde"]}
+dotenv = "0.15.0"
+chrono = { version = "0.4.19", features = ["serde"] }
+sqlx = { version = "0.6.3", default-features = false, features = [
+    "postgres",
+    "runtime-tokio-rustls",
+    "macros",
+    "chrono"
+] }
+
+
 
 [[bin]]
 name = "teacher-service"
